--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: lightblue;
+        }
+    </style>
 </head>
 <body>
     <h1>Przewodnik po Ameryce Środkowej</h1>
