--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 </head>
 <body>
     <h1>Przewodnik po Ameryce Środkowej</h1>
+    <section>
+        <h2>Panama</h2>
+        <img src="https://cdn.pixabay.com/photo/2017/01/20/12/22/isla-diablo-1994802_1280.jpg" alt="">
+    </section>
 </body>
 </html>
