--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <section class="kostaryka">
         <h2>Kostaryka</h2>
         <img src="https://cdn.pixabay.com/photo/2017/09/17/20/35/sloth-2759724_1280.jpg" alt="">
+        <p>Kostaryka to ojczyzna leniwców - zmiana z barnacha kostaryka</p>
     </section>
 </body>
 </html>
