dodaj sekcje honduras

--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
         <p>Leniwiec to symbol Kostaryki - zmiana z main</p>
         <p>Kostaryka to ojczyzna leniwców - zmiana z barnacha kostaryka</p>
     </section>
+
+    <section class="honduras">
+        <h2>Honduras</h2>
+        <img src="https://cdn.pixabay.com/photo/2016/04/28/05/55/roatan-1358175_1280.jpg" alt="">
+    </section>
 </body>
 </html>
