dodaj sekcje meksyk - po drugim amend

--- a/index.html
+++ b/index.html
@@ -34,5 +34,11 @@
         <h2>Nikaragua</h2>
         <img src="https://cdn.pixabay.com/photo/2017/04/25/10/24/volcano-2259249_1280.jpg" alt="">
     </section>
+
+    <section>
+        <h2>Meksyk</h2>
+        <img src="https://cdn.pixabay.com/photo/2016/11/29/09/51/day-of-the-dead-1868836_1280.jpg" alt="">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem praesentium aliquid aspernatur tenetur cumque tempora deserunt ullam assumenda alias enim magni placeat dignissimos voluptas asperiores, quaerat sit veniam a cum. Voluptate facilis eligendi facere exercitationem non modi porro vero sapiente unde consectetur ea corporis delectus quisquam accusamus nam nisi eum, tempore dolore est necessitatibus dicta consequuntur. Quidem quos magni obcaecati?</p>
+    </section>
 </body>
 </html>
