dodaj sekcje salwador

--- a/index.html
+++ b/index.html
@@ -40,5 +40,11 @@
         <img src="https://cdn.pixabay.com/photo/2016/11/29/09/51/day-of-the-dead-1868836_1280.jpg" alt="">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem praesentium aliquid aspernatur tenetur cumque tempora deserunt ullam assumenda alias enim magni placeat dignissimos voluptas asperiores, quaerat sit veniam a cum. Voluptate facilis eligendi facere exercitationem non modi porro vero sapiente unde consectetur ea corporis delectus quisquam accusamus nam nisi eum, tempore dolore est necessitatibus dicta consequuntur. Quidem quos magni obcaecati?</p>
     </section>
+
+    <section>
+        <h2>Salwador</h2>
+        <img src="https://cdn.pixabay.com/photo/2019/06/01/19/11/lake-4244771_1280.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident assumenda similique id voluptate ut dicta iste tenetur suscipit nesciunt incidunt commodi unde laborum iure, quaerat harum perspiciatis quis perferendis.</p>
+    </section>
 </body>
 </html>
