--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
             margin: 0;
             background-color: lightblue;
         }
+
+        h1 {
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        h2 {
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+            line-height: 1.8;
+        }
+
+        img {
+            display: block;
+            margin: 3px auto;
+        }
     </style>
 </head>
 <body>
